--- a/gradle.properties
+++ b/gradle.properties
@@ -46,7 +46,7 @@ mod_id=advancedvaluables
 # The human-readable display name for the mod.
 mod_name=Advanced Valuables
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=All Rights Reserved
+mod_license=MIT
 # The mod version. See https://semver.org/
 mod_version=0.0.4.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
